# django-kmuhelper

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README-EN.md  README.md  README.rst  _version.txt  pyproject.toml  requirements-dev.txt  requirements.txt  runtests.py  setup.cfg  sonar-project.properties
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: check_python.yml  codeql-analysis.yml  python-publish-testpypi.yml  python-publish.yml  quality.yml  tests.yml
docs/: Gemfile  README.md  _config.yml  functions.md  history.md  index.md  infos.md  install.md  installation.md  sitemap.xml  sitemap.xsl  support.md
docs/_data/: pagelist.yml
docs/_includes/: breadcrumbs.html
docs/_layouts/: default.html
docs/assets/: manifest.json  manifest.webmanifest
docs/assets/css/: style.scss
docs/manual/: README.md  app.md  customers.md  emails.md  faq.md  index.md  languages.md  order-and-invoice.md  setup.md  storage.md
docs/manual/apis/: woocommerce.md
docs/manual/integrations/: paymentimport.md  woocommerce.md
kmuhelper/: __init__.py  admin.py  apis.py  app_models.py  app_views.py  apps.py  constants.py  decorators.py  models.py  overrides.py  overwrites.py  runtests.py  settings.py  startup.py  translations.py  urls.py  utils.py  views.py  widgets.py
kmuhelper/api/: __init__.py  admin.py  decorators.py  models.py  urls.py  views.py
kmuhelper/app/: __init__.py  admin.py  models.py  urls.py  views.py
kmuhelper/emails/: __init__.py  admin.py  models.py  urls.py  views.py
kmuhelper/integrations/paymentimport/: __init__.py  admin.py  forms.py  models.py  views.py
kmuhelper/integrations/woocommerce/: __init__.py  api.py  urls.py  utils.py  views.py
kmuhelper/integrations/xmlimport/: admin.py  models.py
kmuhelper/locale/: __qr_invoice_texts.json
kmuhelper/locale/de/LC_MESSAGES/: django.mo  django.po
kmuhelper/locale/en/LC_MESSAGES/: django.mo  django.po
kmuhelper/locale/fr/LC_MESSAGES/: django.mo  django.po
kmuhelper/locale/it/LC_MESSAGES/: django.mo  django.po
kmuhelper/main/: __init__.py  admin.py  models.py  urls.py  views.py
kmuhelper/management/commands/: kmuhelper-import-customers.py  model2csv.py
kmuhelper/migrations/: 0001_initial.py  0002_auto_20200426_1746.py  0003_auto_20200426_1820.py  0004_kunde_zusammenfuegen.py  0005_auto_20200427_1857.py  0006_auto_20200428_1711.py  0007_auto_20200502_1530.py  0008_auto_20200502_1851.py  0009_kunde_notiz.py  0010_kunde_webseite.py  0011_kunde_firma.py  0012_auto_20200603_0859.py  0013_auto_20200603_0910.py  0014_auto_20200603_0927.py  0015_bestellung_fix_summe.py  0016_auto_20200627_1641.py  0017_todoentry.py  0018_auto_20200715_1639.py  0019_auto_20200715_1931.py  0020_auto_20200716_1443.py  0021_versandliste.py  0022_auto_20200716_1534.py  0023_auto_20200716_1553.py  0024_auto_20200716_1714.py  0025_auto_20200716_2126.py  0026_todolagerbestand_todolieferung.py  0027_auto_20200717_1630.py  0028_auto_20200720_1849.py  0029_notiz_produkt.py  0030_auto_20200720_1936.py  0031_auto_20200727_1603.py  0032_auto_20200802_0018.py  0033_auto_20200802_2105.py  0034_bestellungsposten_rabatt.py  0035_auto_20201003_2125.py  0036_auto_20201005_1353.py  0037_auto_20201005_1423.py  0038_produkt_soll_lagerbestand.py  0039_auto_20201006_1803.py  0040_auto_20201009_2329.py  (+80 more)
kmuhelper/modules/: config.py
kmuhelper/modules/api/: __init__.py  admin.py  constants.py  decorators.py  models.py  urls.py  views.py
kmuhelper/modules/app/: __init__.py  admin.py  models.py  urls.py  views.py
kmuhelper/modules/emails/: __init__.py  admin.py  models.py  urls.py  utils.py  views.py
kmuhelper/modules/integrations/paymentimport/: admin.py  forms.py  models.py  views.py
kmuhelper/modules/integrations/woocommerce/: __init__.py  api.py  filters.py  forms.py  mixins.py  urls.py  utils.py  views.py
kmuhelper/modules/log/: admin.py  models.py  urls.py  views.py
kmuhelper/modules/main/: __init__.py  admin.py  filters.py  mixins.py  models.py  urls.py  utils.py  views.py
kmuhelper/modules/pdfgeneration/: __init__.py  base.py  swiss_qr_invoice.py
kmuhelper/modules/pdfgeneration/order/: __init__.py  forms.py  generator.py  views.py
kmuhelper/modules/settings/: __init__.py  admin.py  constants.py  forms.py  models.py  urls.py  utils.py  views.py
kmuhelper/modules/stats/: __init__.py  urls.py  views.py
kmuhelper/pdf_generators/: __init__.py  _base.py  bestellung.py
kmuhelper/settings/: __init__.py  admin.py  models.py  utils.py
kmuhelper/static/admin/js/: changelist_saveontop.js  collapse-open.js
kmuhelper/static/kmuhelper/css/: details.css
kmuhelper/stats/: __init__.py  urls.py  views.py
kmuhelper/templates/admin/: base.html  change_form.html  change_list.html  index.html
kmuhelper/templates/admin/kmuhelper/: _confirm.html  app_index.html  base_site.html  bestellung_change_form.html  bestellung_change_list.html  change_form.html  change_list.html  date_hierarchy.html  delete_confirmation.html  delete_selected_confirmation.html  einstellung_change_list.html  kategorie_change_form.html  kategorie_change_list.html  kunde_change_form.html  kunde_change_list.html  object_history.html  produkt_change_list.html
kmuhelper/templates/kmuhelper/: error.html  home.html  info.html  manifest.json
kmuhelper/templates/kmuhelper/_includes/: form.html  form_field.html  form_fieldset.html  pagechooser.html  pwa_head.html
kmuhelper/templates/kmuhelper/app/: base.html  error.html  home.html  main.html  manifest.webmanifest
kmuhelper/templatetags/: kmuhelper_tags.py  utiltags.py
kmuhelper_tests/: settings.py  urls.py
kmuhelper_tests/general_tests/: test_migrations.py
kmuhelper_tests/t_general/: test_buildinfo.py  test_migrations.py  test_package_version_local.py
kmuhelper_tests/t_models/: test_order.py  test_product.py
kmuhelper_tests/t_modules/: test_pdfgeneration.py
kmuhelper_tests/t_urls/: test_admin_urls.py  test_custom_admin_urls.py
tests/: settings.py  test_settings.py
tests/test_urls/: test_authenticated_admin_urls.py
(+143 files in other folders)
