[metadata]
name = django-kmuhelper
version = file: _version.txt
description = Ein Helfer für schweizer KMU
long_description = file: README.md
long_description_content_type = text/markdown
author = Rafael Urben
author_email = rafaelurben@gmail.com
maintainer = Rafael Urben
maintainer_email = rafaelurben@gmail.com
license = GNU General Public License v3 (GPLv3)
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
url = https://rafaelurben.github.io/django-kmuhelper
docs_url = https://rafaelurben.github.io/django-kmuhelper
bugtrack_url = https://github.com/rafaelurben/django-kmuhelper/issues
project_urls =
    Docs = https://rafaelurben.github.io/django-kmuhelper
    GitHub = https://github.com/rafaelurben/django-kmuhelper
    Issues = https://github.com/rafaelurben/django-kmuhelper/issues

[options]
setup_requires =
    setuptools
install_requires =
    Django>=3.1.2
    gunicorn>=20.0.4
    requests>=2.24.0
    WooCommerce>=2.1.1
    reportlab>=3.5.53
    rich>=8.0.0
    pytz>=2020.1
    packaging>=20.4
python_requires = >= 3.8
include_package_data = true
packages = find:
