[metadata]
name = django-kmuhelper
version = file: _version.txt
description = Ein Helfer für schweizer KMU
long_description = file: README.md
long_description_content_type = text/markdown
author = Rafael Urben
author_email = github@rafaelurben.ch
maintainer = Rafael Urben
maintainer_email = github@rafaelurben.ch
license = GNU General Public License v3 (GPLv3)
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
url = https://rafaelurben.github.io/django-kmuhelper
docs_url = https://rafaelurben.github.io/django-kmuhelper
bugtrack_url = https://github.com/rafaelurben/django-kmuhelper/issues
project_urls =
    Docs = https://rafaelurben.github.io/django-kmuhelper
    GitHub = https://github.com/rafaelurben/django-kmuhelper
    Issues = https://github.com/rafaelurben/django-kmuhelper/issues

[options]
setup_requires =
    setuptools
install_requires =
    Django>=3.2.10
    gunicorn>=20.1.0
    requests>=2.26.0
    WooCommerce>=3.0.0
    reportlab>=3.6.3
    rich>=10.15.2
    packaging>=21.3
    defusedxml>=0.7.1
python_requires = >= 3.8
include_package_data = true
packages = find:
